syntax = "proto3";

package calculator;

service BasicCalculator {
  rpc Add(AddRequest) returns (AddResponse);
  rpc Subtract(SubtractRequest) returns (SubtractResponse);
  rpc Divide(DivideRequest) returns (DivideResponse);
  rpc Multiply(MultiplyRequest) returns (MultiplyResponse);
}

message AddRequest {
  int64 a = 1;
  int64 b = 2;
}

message AddResponse {
  int64 result = 1;
}

message MultiplyRequest {
  int64 a = 1;
  int64 b = 2;
}

message MultiplyResponse {
  int64 result = 1;
}
message DivideRequest {
  int64 a = 1;
  int64 b = 2;
}

message DivideResponse{
  float result = 1;
}
message SubtractRequest {
  int64 a = 1;
  int64 b = 2;
}

message SubtractResponse {
  int64 result = 1;
}

service AdvancesCalculator{
  rpc Exp(ExpRequest) returns (ExpResponse);
  rpc Power(PowerRequest) returns (PowerResponse);
  rpc Sin(SinRequest) returns (SinResponse);
  rpc Cos(CosRequest) returns (CosResponse);
}

message ExpRequest {
  float a = 1;
}

message ExpResponse {
  float result = 1;
}
message PowerRequest {
  float a = 1;
  float b = 2;
}

message PowerResponse {
  float result = 1;
}
message SinRequest {
  float a = 1;
}

message SinResponse {
  float result = 1;
}
message CosRequest {
  float a = 1;
}

message CosResponse {
  float result = 1;
}